--- a/app/index.html
+++ b/app/index.html
@@ -10,12 +10,45 @@
         <link rel="stylesheet" href="styles/styles.css">
     </head>
     <body>
-
-        <div id="main">
-            <div></div>
-            <div></div>
-            <div></div>
-        </div>
+        <section id="wrapper">
+            <aside id="sidebar">
+                <ul>
+                    <li class="user"><h4>Ennio Simões</h4></li>
+                    <li><a href="#">LINK</a></li>
+                    <li><a href="#">LINK</a></li>
+                    <li><a href="#">LINK</a></li>
+                </ul>
+            </aside>
+            <main id="main">
+                <header id="header">
+                    <h3>Admin Template</h3>
+                </header>
+                <section id="content">
+                    <div class="panel">
+                        <div class="panel-heading">
+                            <h2>Painel</h2>
+                        </div>
+                        <div class="panel-body">
+                            <p>
+                                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="panel">
+                        <div class="panel-heading">
+                            <h2>Painel</h2>
+                        </div>
+                        <div class="panel-body">
+                            <form>
+                                <input type="text" placeholder="Nome">
+                                <input type="text" placeholder="Sobrenome">
+                                <input type="submit" value="Enviar">
+                            </form>
+                        </div>
+                    </div>
+                </section>
+            </main>
+        </section>
 
         <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
         <script>
